# django-push-notifications

./: pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
push_notifications/: __init__.py  apns.py  payload.py
tests/: test_apns_models.py  test_apns_push_payload.py
