[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov push_notifications --cov-append --cov-branch --cov-report term-missing --cov-report=xml"

[tool.black]
line-length = 99
skip-string-normalization = '1'
exclude = '''/(\.git|venv|migrations)/'''
